objects/Improvement_Action_Step__c.object
<CustomObject><fields>
        <fullName>Current_Year_Timeline__c</fullName>
        <label>Current Year Timeline</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Date_Range__c</fullName>
        <formula>CASE(MONTH(Start_Date__c), 1, "Jan.",
2, "Feb.",
3, "Mar.",
4, "Apr.",
5, "May.",
6, "Jun.",
7, "Jul.",
8, "Aug.",
9, "Sep.",
10, "Oct.",
11, "Nov.",
12, "Dec.", "")&amp;" "&amp;TEXT(YEAR(Start_Date__c ))&amp;" - "&amp;

CASE(MONTH(Target_Date__c), 1, "Jan.",
2, "Feb.",
3, "Mar.",
4, "Apr.",
5, "May.",
6, "Jun.",
7, "Jul.",
8, "Aug.",
9, "Sep.",
10, "Oct.",
11, "Nov.",
12, "Dec.", "")&amp;" "&amp;TEXT(YEAR(Target_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Range</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Description_of_Action_Step__c</fullName>
        <inlineHelpText>display this help text</inlineHelpText>
        <label>Description of Action Step</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Implementation_Benchmark__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Benchmark</label>
        <referenceTo>Implementation_Benchmark__c</referenceTo>
        <relationshipLabel>Improvement Action Steps</relationshipLabel>
        <relationshipName>Improvement_Action_Steps</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Implementation_Benchmarks__c</fullName>
        <label>Implementation Benchmarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Key_Personnel__c</fullName>
        <label>Key Personnel</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Major_Improvement_Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Major Improvement Strategy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Major Improvement Strategy</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>Improvement Action Steps</relationshipLabel>
        <relationshipName>Improvement_Action_Steps</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Next_Year_Timeline__c</fullName>
        <label>Next Year Timeline</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Public_Facing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Facing</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Resources__c</fullName>
        <label>Resources</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Root_Cause_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Cause 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Root Cause</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>Improvement Action Steps (Root Cause 1)</relationshipLabel>
        <relationshipName>Improvement_Action_Steps1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Root_Cause_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Cause 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Root Cause</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>Improvement Action Steps (Root Cause 2)</relationshipLabel>
        <relationshipName>Improvement_Action_Steps2</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Root_Cause_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Cause 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Root Cause</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>Improvement Action Steps (Root Cause 3)</relationshipLabel>
        <relationshipName>Improvement_Action_Steps3</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>School_Year__c</fullName>
        <label>School Year</label>
        <picklist>
            <picklistValues>
                <fullName>This School Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next School Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Status_of_Action_Step__c</fullName>
        <label>Status of Action Step</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>UIP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIP</label>
        <referenceTo>UIP__c</referenceTo>
        <relationshipLabel>Improvement Action Steps</relationshipLabel>
        <relationshipName>Improvement_Action_Steps</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ZPIF_UIP_Identidier__c</fullName>
        <label>ZPIF UIP Identidier</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>improvement_action_step_source__c</fullName>
        <label>Improvement Action Step</label>
        <length>255</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Improvement Action Step</label><nameField>
        <label>Action Step Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Improvement Action Steps</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><startsWith>Vowel</startsWith><recordTypes>
        <fullName>Action_Steps_Form_Tool</fullName>
        <active>true</active>
        <description>Record type contains fields for Action Step entry on a UIP.</description>
        <label>Action Steps Form Tool</label>
    </recordTypes></CustomObject>